<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen_message_hello">Hello!</string>
    <string name="splash_screen_message_welcome">Welcome!</string>
    <string name="status">Status:</string>
    <string name="specy">Specy:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="episodes">Episodes:</string>
    <string name="created_at_n_in_api">Created at\n(in API):</string>
</resources>